--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "safe-math",
+  "name": "safe-math-operations",
   "version": "1.0.0",
-  "description": "SafeMath is a utility library for performing safe arithmetic operations in JavaScript. It ensures that the results of arithmetic operations do not exceed the safe integer range in JavaScript (Number.MAX_SAFE_INTEGER and Number.MIN_SAFE_INTEGER)",
+  "description": "Safe Math Operations is a utility library for performing safe arithmetic operations in JavaScript. It ensures that the results of arithmetic operations do not exceed the safe integer range in JavaScript (Number.MAX_SAFE_INTEGER and Number.MIN_SAFE_INTEGER)",
   "main": "index.js",
   "scripts": {
     "test": "node test.js"
