--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "safe-math-operations",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Safe Math Operations is a utility library for performing safe arithmetic operations in JavaScript. It ensures that the results of arithmetic operations do not exceed the safe integer range in JavaScript (Number.MAX_SAFE_INTEGER and Number.MIN_SAFE_INTEGER)",
   "main": "index.js",
   "scripts": {
@@ -18,12 +18,15 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/kashyapkaki/safe-math.git"
+    "url": "https://github.com/kashyapkaki/safe-math.git"
   },
   "author": "Kashyap Kaki",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/kashyapkaki/safe-math/issues"
   },
-  "homepage": "https://github.com/kashyapkaki/safe-math/#readme"
+  "homepage": "https://github.com/kashyapkaki/safe-math/#readme",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  }
 }
